2014-08-21  Larus  <larus@Jim-MacBook-Air.local>

	* Documentation/SourceForge/index.html:
	Update links to Qt source.

2014-05-31  Larus  <larus@Jim-MacBook-Air.local>

	* spim/spim.c [Jorge Garcia Aguilar <jorgegarag@gmail.com>]:
	Add -dump and -full_dump flags to write data and text segments
	to a file.

2014-02-02  Larus  <larus@Jim-MacBook-Air.local>

	* Setup/QtSpim_Mac_Deployment/QtSpim_Mac_pkproj:
	Fixed Mac install to include instructions how to work around
	Gatekeeper rejection of unsigned apps.

2014-01-26  Larus  <larus@Jim-MacBook-Air.local>

	* CPU/version.h (SPIM_VERSION):
	Version 9.1.13

	* QtSpim/macinfo.plist, QtSpim/QtSpim.pro, NewIcon.icns:
	Added application icon for MacOS.

	* bin/release-osx
	[Philip James, https://sourceforge.net/p/spimsimulator/bugs/54]:
	Need to package Frameworks and plugs with Mac release and change
	file paths so they can be found.

2014-01-22  Larus  <larus@Jim-MacBook-Air.local>

	* CPU/op.h [Philip Machanick <p.machanick@ru.ac.za>]:
	Break instruction does not take any arguments.

2013-12-28    <larus@IC-LMC-ICDO-01>

	* Documentation/SourceForge/index.html:
	Bad path to files on SourceForge.

2013-12-17    <larus@IC-LMC-ICDO-01>

	* New release of QtSpim for Windows to include msvcp110.dll.

2013-12-14  Larus  <larus@Jim-MacBook-Air.local>

	* CPU/version.h (SPIM_VERSION):
	Version 9.1.12

	* QtSpim/menu.cpp (help_ViewHelp):
	Further adjustment of file positions on Mac OS.

2013-12-13  Larus  <larus@Jim-MacBook-Air.local>

	* QtSpim/help/qtspim.qhcp, QtSpim/help/qtspim.qhp:
	Fix naming issues in QtSpim help. Open at top of page.

	* QtSpim/menu.cpp (help_ViewHelp):
	Properly launch Qt Assistant on Mac OS.

2013-12-11  Larus  <larus@icdhcp-1-098.epfl.ch>

	* QtSpim/QtSpim.pro:
	Set flags for clang on Mac OS.

	* CPU/run.c (run_spim):
	Eliminate nop assignments caught by clang.

2013-12-10    <larus@IC-LMC-ICDO-01>

	* CPU/version.h:
	Version 9.1.11:

	* CPU/inst.c, CPU/op.h, CPU/parser.y, Tests/tt.core.s: